crates/loxide_interpreter/tests/snapshots/integration@operator__add_bool_string.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
true + "s"; // expect runtime error: Operands must be two numbers or two strings.


>>>>> Error Section <<<<<
  × Invalid binary operand, expected: number
   ╭────
 1 │ true + "s"; // expect runtime error: Operands must be two numbers or two strings.
   · ──┬─
   ·   ╰── expect a number type here
   ╰────
